--- a/studio/p2/css/main.css
+++ b/studio/p2/css/main.css
@@ -46,6 +46,14 @@ h2{
     display: absolute;
 }
 
+.author{
+    position: absolute;
+    margin-left: 700px;
+    margin-top: 0px;
+    font-size: 70pt;
+    
+}
+
 @media screen and (max-width: 500px) {
     body {
         font-family: "wordan";
