--- a/studio/p3/css/main.css
+++ b/studio/p3/css/main.css
@@ -1,35 +1,151 @@
 body{
     background-color: black;
     color: white;
+    overflow: hidden;
+    
 
 }
 
-#title{
-    font-size: 50px;
+.filter{
+    font-family: "coco";
+    color: rgb(197, 197, 197);
+    position: absolute;
+    padding: 5px;
 }
 
-#singer{
-    font-size: 20px;
+h2{
+    position: absolute;
+    top: 580px;
+    margin-bottom: 20px;
+    line-height: 70px;
+    font-size: 58px; 
+    font-family: "coco";
+    letter-spacing: 5px;
+    color: white;
 }
+
+.working{
+    position: absolute;
+    top: 324px;
+    left: 658px;
+    margin-bottom: 20px;
+    z-index: 45;
+}
+.playing{
+    position: absolute;
+    top: 515px;
+    left: 785px;
+    margin-bottom: 20px;
+    z-index: 45;
+
+}
+.sleeping{
+    position: absolute;
+    top: 140px;
+    left: 260px;
+    margin-bottom: 20px;
+    z-index: 45;
+
+}
+.walking{
+    position: absolute;
+    top: 350px;
+    left: 910px;
+    margin-bottom: 20px;
+    z-index: 45;
+
+}
+.alone{
+    position: absolute;
+    top: 220px;
+    left: 365px;
+    margin-bottom: 20px;
+    z-index: 45;
+
+}
+.reset{
+    position: absolute;
+    top: 20px;
+    left: 1250px;
+    margin-bottom: 20px;
+}
+
+
 
 .song-container{
     display: inline-block;
-    height: 150px;
-    width: 150px;
-    border: 0.7px solid white;
+    position: absolute;
     border-radius: 50%;
+    border: 0.7px solid white;
 }
 
 .song-container:hover{
-    border: 4px solid white;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid white;
+}
 
+
+.song-title{
+    display:none;
+    position: absolute;
+}
+
+.song-title.active{
+    display:inline-block;
+    position: absolute;
+    top: -20px;
+    padding: 10px;
+    z-index: 50;
+    text-shadow: 5px 5px 10px rgb(0, 0, 0);
+}
+
+.song-artist{
+    display: none;
+    position: inherit;
+}
+.song-artist.active{
+    display:inline-block;
+    position: absolute;
+    top: 30px;
+    padding: 10px;
+    z-index: 50;
+    text-shadow: 2px 2px 5px rgb(0, 0, 0);
+    
 }
 
 .song-cover{
-    height: 100%;
-    width: auto;
-    border: 0px solid rgba(255, 255, 255, 0);
+    height: inherit;
+    width: inherit;
+    position: absolute;
+    opacity: 0%;
     border-radius: 50%;
-    display: inline-block;
+    display: inherit;
+    transition: 3s;
+    z-index: 40;
 }
+
+/* .working{
+    height: 500px;
+    width: 500px;
+    opacity: 40%;
+    border: 2px solid white;
+    border-radius: 50%;
+    display: inherit;
+    position: absolute;
+} */
+
+.song-cover:hover{
+    position: absolute;
+    border: 0.5px solid white;
+    opacity: 100%;
+    z-index: 40;
+} 
+
+
+
+
+
+
 
