--- a/studio/p4/css/main.css
+++ b/studio/p4/css/main.css
@@ -1,23 +1,31 @@
 body{
     text-align: center;
-    margin: 50px;
     background-color: rgb(156, 193, 214);
 }
 
 div{
+  display: inline-block;
   position: absolute;
   font-size: 50px;
-  top: 300px;
-  left: 200px;
+  margin: 100px;
   font-family:'Courier New', Courier, monospace;
   text-align: center;
 }
+
+.decoration {
+  display: inline-block;
+  max-width: 200px;
+  margin:30px;
+  opacity: 0%;
+}
+  
+
 
 /* .letter_a{
     background-color: blue;
 } */
 
-.letter_a{
+/* .letter_a{
     width: 100px;
     height: 100px;
     border: 3px solid white;
@@ -82,6 +90,6 @@ div{
   border-radius: 50%;
   border: 1px solid white;
   display: inline-block;
-}
+} */
 
   
